fix two scrollbars appearing on a recipe

--- a/kyberkucharka-frontend/src/styles/recipe.css
+++ b/kyberkucharka-frontend/src/styles/recipe.css
@@ -2,6 +2,7 @@
   color: #1a1a1a;
   text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .recipe-title {
